--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,11 +18,46 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
-li{
-font-size: 20px;
-  list-style: none;
+.gallery {
+  display: grid;
+  max-width: 1140px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-auto-rows: 330px;
+  grid-gap: 12px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.info{
-  font-size: 2rem
+.gallery__item {
+  position: relative;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+.gallery__image {
+display: block;
+height: 250px;
+max-width: 100%;
+object-fit: cover;
+}
+.gallery__link {
+  display: block;
+  text-decoration: none;
+  height: 100%;
+}
+
+
+.photo-card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.info {display: flex;
+
+text-align: center;
+  padding: 15px;
+}
+p {  margin: 0;
 }
